# gathers_rank

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
migrations/: 001_initial.sql
src/: auth.rs  error.rs  main.rs  models.rs
src/handlers/: admin.rs  mod.rs  player.rs  public.rs
static/: admin.html  index.html  player.html
